hphp/hack/test/typecheck/reactive/static_rx_if_implements5.php.exp
File "static_rx_if_implements5.php", line 18, characters 10-20:
Cannot invoke conditionally reactive function in reactive context, because at least one reactivity condition is not met. (Typing[4237])
File "static_rx_if_implements5.php", line 18, characters 10-15:
Receiver type must be a subtype of \Rx, now \NonRxA.
File "static_rx_if_implements5.php", line 7, characters 26-26:
This is the function declaration
